# Wepp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Wepp-Builder.fbp  build.bat  build.sh  run.sh
include/Api/: HandlerFunctions.hpp
include/Application/: FileIO.hpp  HandlerFunctions.hpp
include/Builder/: App.hpp  MainFrame.hpp
include/Server/: HTTPChecks.hpp  HandlerFunctions.hpp  Server.hpp
include/Wepp/Server/: ClientSocket.hpp  Server.hpp
src/Api/: CMakeLists.txt  HandlerFunctions.cpp  main.cpp
src/Application/: CMakeLists.txt  FileIO.cpp  HTTPChecks.cpp  HandlerFunctions.cpp  main.cpp
src/Builder/: App.cpp  CMakeLists.txt  MainFrame.cpp  main.cpp
src/FileHandling/: CMakeLists.txt  FileIO.cpp
src/Server/: CMakeLists.txt  HTTPChecks.cpp  HandlerFunctions.cpp  Server.cpp  main.cpp
